PIC-3624 review comments